Added the title for the Movie Search App.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <center>
+
+      <header>
+        <h1>Movie Search App</h1>
+      </header>
+      
+    </center>
 
     <script src="index.js"></script>
   </body>
