Add the header section with the title of the app and a search form with an input field and a search button.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
       <header>
         <h1>Movie Search App</h1>
       </header>
-      
+
+      <form id="search-form">
+        <input type="text" id="search-input"
+          placeholder="Search for movies...">
+        <button type="submit">Search</button>
+      </form>
+
     </center>
 
     <script src="index.js"></script>
