[200~Create the main container for displaying movie search results.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           placeholder="Search for movies...">
         <button type="submit">Search</button>
       </form>
-
+      <main id="movie-list" class="movie-container">
+        <!-- Movie search results will be dynamically added here -->
+      </main>
     </center>
 
     <script src="index.js"></script>
