deleted .gitignore,restyled my buttons for view details

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
       <form id="search-form" onsubmit="submitForm(event)">
         <div class="input-container">
-          <input type="text" id="search-input" placeholder="Search for movies...">
+          <input type="text" id="search-input"
+            placeholder="Search for movies...">
           <span class="clear-icon" onclick="clearInput()">&times;</span>
         </div>
         <button type="submit">Search</button>
